create endpoint to get logged in user details and update a user
